Cleaned up unnecessary comments and lines after html validator test, fixed nav and footer spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,27 @@ body, html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 100vh; 
+    align-items: center;
 }
 
-body h1 {
+.page-title {
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+
+.navbar {
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    z-index: 1000;
+    background-color: #222;
+    border-bottom: 1px solid #222;
+    margin-top: 0;
+    padding-top: 0;
+}
+
+body h2 {
     color: red;
 }
 
@@ -89,6 +106,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 20px;
+    text-align:center;
 }
 
 /*answer buttons */
@@ -137,11 +155,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .signup-container {
     background-color: #ffffff;
+    margin-top: 100px;  
     padding: 20px;
+    width: 600px;
+    text-align: center;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -207,6 +229,10 @@ button:hover {
     padding: 20px 0;
     text-align: center;
     font-family: arial, sans-serif;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 .footer .footer-box {
